Corrected z-index with mini map pver streetview

--- a/static/css/experience.css
+++ b/static/css/experience.css
@@ -60,7 +60,7 @@ footer  {
  
 #content {
 	position:relative; 
-	margin-top:180px;
+	margin-top:168px;
 	height:auto;
 }                    
   
@@ -431,13 +431,13 @@ article section {
 	-ms-border-radius:10px;
 }
 
-
 #map-visualization {
 	width:100%;
 	height:100%;
 	position:fixed;
 	z-index:0;
 }
+
 #map_canvas {
 	width:200px;
 	height:200px;
@@ -450,13 +450,12 @@ article section {
 
 #pano {
 	width:100%;
-	height:1000px;
+	height:100%;
 	position:absolute;
 	left:0px;
 	top:0px;
 	z-index:0;
 }
-
 
 /*
 *	Minimized
@@ -469,7 +468,6 @@ article section {
 #hotels.minimized header {
 	display:none;
 }
-
 
 #horizontal {
 	width:98px;
